<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stratton Oakmont Finances</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">hello</string>
    <string name="button_goToLogin">Log In</string>
    <string name="button_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="button_login">Login</string>
    <string name="login_username">enter username here</string>
    <string name="login_password">enter password here</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="success">SUCCESS!</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="title_activity_user_home">User Home</string>
    <string name="title_activity_add_account">Add Account</string>
    <string name="account_fullname">enter account name</string>
    <string name="account_displayname">enter account display name</string>
    <string name="account_balance">enter initial balance</string>
    <string name="account_interestrate">enter interest rate</string>
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="title_activity_transaction_home">Transaction Home</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="deposit">Deposit</string>
    <string name="submit">Submit</string>
    <string name="transactionName">transaction name</string>
    <string name="dollarSign">$</string>
    <string name="dateString">MM/DD/YYYY</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_report_view">Report</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Shopping</item>
        <item>Entertainment</item>
        <item>Clothing</item>
        <item>Rent</item>
        <item>Income</item>
    </string-array>
    
    <string-array name="reports">
        <item>Spending Category Report</item>
        <item>Cash Flow Report</item>
        <item>Income Category Report</item>
    </string-array>

    <string name="title_activity_date_picking">Date Picking</string>
    <string name="button_continue">Continue</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="view_chart">View Chart</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sort_by_amount">Sort by Amount</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="action_change_currency">Change Currency</string>
    <string name="us_dollars">USD ($)</string>
    <string name="gbp">GBP (£)</string>
    <string name="currency_symbol">$</string>
    <string name="euro">Euro (€)</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="email_lost_password">Email lost password</string>
    <string name="hint">Password Hint</string>

</resources>
