<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    
    <item android:id="@+id/sort_by_amount" android:title="@string/sort_by_amount" android:orderInCategory="101"></item><item android:id="@+id/sort_by_date" android:orderInCategory="102" android:title="@string/sort_by_date">    
    </item><item android:id="@+id/sort_by_name" android:title="@string/sort_by_name" android:orderInCategory="103"></item><item android:id="@+id/addTransact"
		  android:showAsAction="ifRoom"
		  android:title="Add Transaction"
		  android:icon="@drawable/ic_action_new">
        
    </item>
    
    
    

</menu>
