<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AddAccountActivity" >

        <EditText
            android:id="@+id/acc_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/account_fullname" />

        <EditText
            android:id="@+id/acc_displayname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/acc_fullname"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/account_displayname" />

        <EditText
            android:id="@+id/acc_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/acc_displayname"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/account_balance"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/acc_interestrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/acc_balance"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:hint="@string/account_interestrate"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/acc_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/acc_interestrate"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/acc_interestrate"
            android:onClick="onSubmitClick"
            android:text="Submit" />

        <Button
            android:id="@+id/acc_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/acc_submit"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/acc_submit"
            android:onClick="onCancelClick"
            android:text="Cancel" />

    </RelativeLayout>

</ScrollView>