<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true" >
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".DatePickingActivity" >
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/datePickerStart"
	        android:layout_below="@+id/datePickerStart"
	        android:layout_marginTop="22dp"
	        android:text="@string/end_date" />
	
	    <DatePicker
	        android:id="@+id/datePickerEnd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_below="@+id/textView2"
	        android:layout_marginTop="16dp"
	        android:calendarViewShown="false" />
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/datePickerEnd"
	        android:layout_marginRight="22dp"
	        android:layout_marginTop="21dp"
	        android:text="@string/button_continue"
	        android:onClick="finishDate" />

	    <TextView
	        android:id="@+id/start_date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/datePickerStart"
	        android:layout_alignParentTop="true"
	        android:text="@string/start_date" />

	    <DatePicker
	        android:id="@+id/datePickerStart"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/start_date"
	        android:calendarViewShown="false" />
	
	</RelativeLayout>
</ScrollView>